cabal-version:      2.4
name:               hasculator
version:            0.1.0.0

executable hasculator
    main-is:          Main.hs

    other-modules:    Expression

    build-depends:    base == 4.18.0.0,
                      parsec == 3.1.17.0,
                      mtl == 2.3.1,
                      containers == 0.7

    hs-source-dirs:   app

    default-language: Haskell2010
